@@ -3,6 +3,10 @@ Changelog
 
 In next version
 
+- Optimize simple case: if path expression is a single path and path
+  is 'nothing' or has 'nocall:', just return value as-is, without
+  going through path_traverse. [sidnei]
+
 - Moved evaluate_path and evaluate_exists over from ``five.pt``, adds
   support for global ``path()`` and ``exists()`` functions for use in
   ``python:`` expressions (LP #317967).
